--- a/blogserver/blogserver-web/src/main/webapp/WEB-INF/web.xml
+++ b/blogserver/blogserver-web/src/main/webapp/WEB-INF/web.xml
@@ -19,7 +19,8 @@
 	<param-name>contextConfigLocation</param-name>
 	<param-value>
 		classpath:/META-INF/spring/blogserver-web.xml
-
+		classpath:/META-INF/spring/blogserver-dao.xml
+		<!--classpath:/META-INF/spring/blogserver-web.xml-->
 	</param-value>
 </context-param>  
 
