--- a/blogserver-common/pom.xml
+++ b/blogserver-common/pom.xml
@@ -87,6 +87,16 @@
             <artifactId>spring-webmvc</artifactId>
 
         </dependency>
+        <dependency>
+            <groupId>org.mybatis.generator</groupId>
+            <artifactId>mybatis-generator-core</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+            <version>1.7</version>
+        </dependency>
 
 
     </dependencies>
