--- a/blogserver-service/src/main/webapp/WEB-INF/web.xml
+++ b/blogserver-service/src/main/webapp/WEB-INF/web.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--suppress InjectedReferences -->
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xmlns="http://java.sun.com/xml/ns/javaee"
-		 xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-		 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-		 id="rsserver-web"
-		 version="2.5">
+<web-app
+        xmlns="http://java.sun.com/xml/ns/javaee"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_1.xsd"
+        version="3.1"
+        metadata-complete="false"
+        id="blog-api">
 	<context-param>
 		<param-name>webAppRootKey</param-name>
 		<param-value>blogserver-web</param-value>
