--- a/blogserver-service/pom.xml
+++ b/blogserver-service/pom.xml
@@ -15,6 +15,22 @@
     <name>${project.artifactId} v${project.version}</name>
     <build>
         <finalName>blogserver</finalName>
+        <plugins>
+        	<plugin>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>9.2.1.v20140609</version> <!-- latest at time of writing -->
+				<configuration>
+					<jettyXml>${basedir}/etc/jetty.xml</jettyXml>
+					<webApp>
+						<contextPath>/</contextPath>
+						<defaultsDescriptor>${basedir}/etc/webdefault.xml</defaultsDescriptor>
+					</webApp>
+					<stopPort>9966</stopPort>
+					<stopKey>foo</stopKey>
+				</configuration>
+			</plugin>
+        </plugins>
     </build>
     <dependencies>
 
