--- a/blogserver-service/src/main/webapp/WEB-INF/web.xml
+++ b/blogserver-service/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
 
 	<context-param>
 		<param-name>logbackConfigLocation</param-name>
-		<param-value>file:/opt/appconfig/blogserver/logback.xml</param-value>
+		<param-value>classpath:logback.xml</param-value>
 	</context-param>
 
 	<context-param>
