--- a/blogserver-service/pom.xml
+++ b/blogserver-service/pom.xml
@@ -17,7 +17,7 @@
         	<plugin>
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
-				<version>9.2.1.v20140609</version> <!-- latest at time of writing -->
+				<version>9.2.1.v20140609</version> latest at time of writing
 				<configuration>
 					<jettyXml>${basedir}/etc/jetty.xml</jettyXml>
 					<webApp>
@@ -28,6 +28,15 @@
 					<stopKey>foo</stopKey>
 				</configuration>
 			</plugin>
+<!-- 			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<url>http://localhost:8080/blog/api</url>
+					<server>tomcat</server>
+				</configuration>
+			</plugin> -->
         </plugins>
     </build>
     <dependencies>
