--- a/blogserver-service/src/main/webapp/WEB-INF/web.xml
+++ b/blogserver-service/src/main/webapp/WEB-INF/web.xml
@@ -20,9 +20,9 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
-			classpath:/META-INF/spring/blogserver-web.xml
 			classpath:/META-INF/spring/blogserver-dao.xml
-			classpath:/META-INF/spring/blogserver-common.xml
+			classpath:/META-INF/spring/blogserver-context.xml
+			classpath:/META-INF/spring/blogserver-web.xml
 			<!--classpath:/META-INF/spring/blogserver-web.xml-->
 		</param-value>
 	</context-param>
@@ -64,7 +64,7 @@
 
 	<servlet-mapping>
 		<servlet-name>controller</servlet-name>
-		<url-pattern>*.do</url-pattern>
+		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
 	<welcome-file-list>
