--- a/blogserver-service/pom.xml
+++ b/blogserver-service/pom.xml
@@ -17,7 +17,7 @@
         	<plugin>
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
-				<version>9.2.1.v20140609</version> latest at time of writing
+				<version>9.2.1.v20140609</version>
 				<configuration>
 					<jettyXml>${basedir}/etc/jetty.xml</jettyXml>
 					<webApp>
@@ -49,11 +49,6 @@
 			<artifactId>fastjson</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<version>3.1.0</version>
-		</dependency>
-		<dependency>
 			<groupId>com.landaojia</groupId>
 			<artifactId>blogserver-common</artifactId>
 			<version>1.0-SNAPSHOT</version>
@@ -63,6 +58,10 @@
 					<artifactId>javaee-api</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
 		</dependency>
 	</dependencies>
 
