--- a/blogserver-service/src/main/resources/runtime.properties
+++ b/blogserver-service/src/main/resources/runtime.properties
@@ -1,10 +1,11 @@
 
 #------datasource-------------------------
 landaojia.dao.driver=com.mysql.jdbc.Driver
-landaojia.dao.url=jdbc:mysql://127.0.0.1:3306/lazy_blog?useUnicode=true&characterEncoding=utf8
+landaojia.dao.url=jdbc:mysql://127.0.0.1:3306/blog?useUnicode=true&characterEncoding=utf8
 landaojia.dao.user=root
-landaojia.dao.pwd=
+landaojia.dao.pwd=111111
 landaojia.dao.initialSize=10
 landaojia.dao.minIdle=10
 landaojia.dao.maxActive=30
 landaojia.dao.maxWait=10000
+
