--- a/blogserver-common/pom.xml
+++ b/blogserver-common/pom.xml
@@ -141,10 +141,7 @@
 		</dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
+            <artifactId>javax.servlet-api</artifactId>
         </dependency>
-
     </dependencies>
-
-
 </project>
