--- a/blogserver-service/src/main/resources/runtime.properties
+++ b/blogserver-service/src/main/resources/runtime.properties
@@ -4,6 +4,9 @@ landaojia.dao.driver=com.mysql.jdbc.Driver
 landaojia.dao.url=jdbc:mysql://120.26.73.158:16033/blog_db?useUnicode=true&characterEncoding=utf8
 landaojia.dao.user=landaojia
 landaojia.dao.pwd=LdjMySQL@#$20150826
+#landaojia.dao.url=jdbc:mysql://127.0.0.1:3306/blog_db?useUnicode=true&characterEncoding=utf8
+#landaojia.dao.user=root
+#landaojia.dao.pwd=123456
 landaojia.dao.initialSize=10
 landaojia.dao.minIdle=10
 landaojia.dao.maxActive=30
