--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
         <version.jtds>1.2.4</version.jtds>
         <version.curator>1.3.3</version.curator>
         <version.aspectj>1.8.2</version.aspectj>
-        <version.servlet>2.5</version.servlet>
+        <version.servlet>3.1.0</version.servlet>
         <version.jstl>1.2</version.jstl>
         <version.jmail>1.4</version.jmail>
         <version.fastjson>1.1.39</version.fastjson>
@@ -281,7 +281,7 @@
             <!--  -->
             <dependency>
                 <groupId>javax.servlet</groupId>
-                <artifactId>servlet-api</artifactId>
+                <artifactId>javax.servlet-api</artifactId>
                 <version>${version.servlet}</version>
                 <scope>provided</scope>
             </dependency>
