--- a/blogserver-service/src/main/webapp/WEB-INF/web.xml
+++ b/blogserver-service/src/main/webapp/WEB-INF/web.xml
@@ -105,6 +105,10 @@
 		<servlet-name>default</servlet-name>
 		<url-pattern>*.doc</url-pattern>
 	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>default</servlet-name>
+		<url-pattern>*.map</url-pattern>
+	</servlet-mapping>
 	<!-- 字体相关  开始 -->
 	<servlet-mapping>
 		<servlet-name>default</servlet-name>
