--- a/blogserver-service/pom.xml
+++ b/blogserver-service/pom.xml
@@ -28,16 +28,38 @@
 					<stopKey>foo</stopKey>
 				</configuration>
 			</plugin>
-<!-- 			<plugin>
-				<groupId>org.apache.tomcat.maven</groupId>
-				<artifactId>tomcat7-maven-plugin</artifactId>
-				<version>2.2</version>
-				<configuration>
-					<url>http://localhost:8080/blog/api</url>
-					<server>tomcat</server>
-				</configuration>
-			</plugin> -->
-        </plugins>
+
+
+			<!-- 			<plugin>
+                            <groupId>org.apache.tomcat.maven</groupId>
+                            <artifactId>tomcat7-maven-plugin</artifactId>
+                            <version>2.2</version>
+                            <configuration>
+                                <url>http://localhost:8080/blog/api</url>
+                                <server>tomcat</server>
+                            </configuration>
+                        </plugin> -->
+		</plugins>
+		<resources>
+			<!--<resource>-->
+				<!--<directory>src/main/resources</directory>-->
+				<!--<includes>-->
+					<!--<include>**/*.properties</include>-->
+					<!--<include>**/*.xml</include>-->
+				<!--</includes>-->
+				<!--<filtering>true</filtering>-->
+			<!--</resource>-->
+			<resource>
+				<directory>src/main/java</directory>
+				<includes>
+					<include>**/*.xml</include>
+				</includes>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
     </build>
     <dependencies>
 		<dependency>
@@ -89,7 +111,6 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
 		</dependency>
-
 
 	</dependencies>
 
