--- a/blogserver-service/pom.xml
+++ b/blogserver-service/pom.xml
@@ -11,6 +11,14 @@
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
     <name>${project.artifactId} v${project.version}</name>
+
+
+	<properties>
+		<project.deploy>deploy</project.deploy>
+		<project.tomcat.version>8.0.0-RC5</project.tomcat.version>
+	</properties>
+
+
     <build>
         <finalName>blogserver</finalName>
         <plugins>
@@ -28,27 +36,30 @@
 					<stopKey>foo</stopKey>
 				</configuration>
 			</plugin>
-
-
-			<!-- 			<plugin>
-                            <groupId>org.apache.tomcat.maven</groupId>
-                            <artifactId>tomcat7-maven-plugin</artifactId>
-                            <version>2.2</version>
-                            <configuration>
-                                <url>http://localhost:8080/blog/api</url>
-                                <server>tomcat</server>
-                            </configuration>
-                        </plugin> -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<url>http://localhost:8888/manager/text</url>
+					<username>tomcat</username>
+					<password>123456</password>
+					<update>true</update>
+					<path>/${project.build.finalName}</path>
+				</configuration>
+			</plugin>
 		</plugins>
+
 		<resources>
-			<!--<resource>-->
-				<!--<directory>src/main/resources</directory>-->
-				<!--<includes>-->
-					<!--<include>**/*.properties</include>-->
-					<!--<include>**/*.xml</include>-->
-				<!--</includes>-->
-				<!--<filtering>true</filtering>-->
-			<!--</resource>-->
 			<resource>
 				<directory>src/main/java</directory>
 				<includes>
@@ -111,7 +122,12 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>tomcat-servlet-api</artifactId>
+			<version>${project.tomcat.version}</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 
