--- a/blogserver-service/src/main/resources/runtime.properties
+++ b/blogserver-service/src/main/resources/runtime.properties
@@ -12,3 +12,11 @@ landaojia.dao.minIdle=10
 landaojia.dao.maxActive=30
 landaojia.dao.maxWait=10000
 
+#------redis-------------------------
+redis.pool.maxIdle=500
+redis.pool.minIdle=5
+redis.pool.maxTotal=500
+redis.pool.maxWaitMillis=3000
+redis.host=120.26.73.158
+redis.port=6379
+redis.auth=mypass
