--- a/blogserver-service/src/main/webapp/WEB-INF/web.xml
+++ b/blogserver-service/src/main/webapp/WEB-INF/web.xml
@@ -18,12 +18,7 @@
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>
-			classpath:/META-INF/spring/blogserver-dao.xml
-			classpath:/META-INF/spring/blogserver-context.xml
-			classpath:/META-INF/spring/blogserver-web.xml
-			<!--classpath:/META-INF/spring/blogserver-web.xml-->
-		</param-value>
+		<param-value>classpath:/META-INF/spring/blogserver*.xml</param-value>
 	</context-param>
 
 	<filter>
